fix empty gap ExpenseCard component

--- a/src/components/Expenses/ExpenseCard/ExpenseCard.css
+++ b/src/components/Expenses/ExpenseCard/ExpenseCard.css
@@ -13,6 +13,10 @@
   gap: 1rem;
 }
 
+.rbc-event .rbc-event-label {
+  display: none;
+}
+
 .expense-card:hover {
   transform: translateY(-2px);
 }
